--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>976609462041-hke6l6sf6nbpvi4mrpnrgup021jnngk0.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.976609462041-hke6l6sf6nbpvi4mrpnrgup021jnngk0</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>976609462041-upp7gdl55d3tq968m22dhufictrq2rl3.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDvJ0QQvY-BcIUW-KNhgIQ9Wc_FDF4HrqY</string>
 	<key>GCM_SENDER_ID</key>
